--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>Style Wars</h1>
+      <h1>ABCs of CSS</h1>
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -107,13 +107,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=93" rel="prev">
+        <a href="/?id=94" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=39">
+        <a class="random-post" href="/?id=83">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -136,7 +136,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/94/94-r2d2-0.webp" alt="Cartoon showing R2D2, a robot from the movie Star Wars, projecting a hologram that reads 'Help me, CSS. You are my only hope!'" />
+        <img src="/comics/95/95-abc-css-0.webp" alt="ABCs of CSS, to check a more detailed version of the comic, visit the source code below" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -146,13 +146,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=93" rel="prev">
+        <a href="/?id=94" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=85">
+        <a class="random-post" href="/?id=62">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -175,9 +175,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=94">https://comicss.art/?id=94</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/94/r2d2.png">hhttps://comicss.art/comics/94/r2d2.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/94/r2d2.html" rel="alternate">https://comicss.art/comics/94/r2d2.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=95">https://comicss.art/?id=95</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/95/abc-css.png">hhttps://comicss.art/comics/95/abc-css.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/95/abc-css.html" rel="alternate">https://comicss.art/comics/95/abc-css.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -215,7 +215,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-07-03"></script>
+    <script src="/js/data.js?last-updated=2023-07-10"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
