Update index.html for CSS MD

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>ABCs of CSS</h1>
+      <h1>CSS MD</h1>
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -107,7 +107,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=94" rel="prev">
+        <a href="/?id=95" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -136,7 +136,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/95/95-abc-css-0.webp" alt="ABCs of CSS, to check a more detailed version of the comic, visit the source code below" />
+        <img src="/comics/96/96-css-md-0.webp" alt="Cartoon showing a patient with red boxes surrounding eyes, ears, face, and other body parts; and a concerned doctor that says 'I am really sorry, Mr Smith. I have done everything I know, but I cannot see what is wrong.'" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -146,7 +146,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=94" rel="prev">
+        <a href="/?id=95" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -175,9 +175,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=95">https://comicss.art/?id=95</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/95/abc-css.png">hhttps://comicss.art/comics/95/abc-css.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/95/abc-css.html" rel="alternate">https://comicss.art/comics/95/abc-css.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=96">https://comicss.art/?id=96</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/96/css-md.png">hhttps://comicss.art/comics/96/css-md.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/96/css-md.html" rel="alternate">https://comicss.art/comics/96/css-md.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -215,7 +215,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-07-10"></script>
+    <script src="/js/data.js?last-updated=2023-07-17"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
