New comic: lost in translation

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>Duck Test</h1>
+
+      <h1>Lost in Translation</h1>
+
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -107,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=96" rel="prev">
+        <a href="/?id=98" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -135,8 +137,13 @@
         </a>
       </nav>
 
-      <div id="comic-strip">
-        <img src="/comics/97/97-duck-test-0.webp" alt="If it looks like a duck, swims like a duck, and quacks like a duck, it probably is a duck. If it has filters like a drawing language, gradients like a drawing language, and blend modes like a drawing language... It is clearly a styling language! Nothing to do with drawings and graphics. Absolutely nothing! OK?" />
+      <div id="comic-strip" role="img" aria-label="Comic with 6 panels showing a man sitting in front of a computer. The screen goes off and the person asks for help. Another person off-panel says the problem is a translateY and to wait one more panel. In the next panel (below to the one where the screen disappeared), the code appears to the confusion of the person.">
+        <img src="/comics/99/99-lost-in-translation-0.webp" alt="" />
+        <img src="/comics/99/99-lost-in-translation-1.webp" alt="" />
+        <img src="/comics/99/99-lost-in-translation-2.webp" alt="" />
+        <img src="/comics/99/99-lost-in-translation-3.webp" alt="" />
+        <img src="/comics/99/99-lost-in-translation-4.webp" alt="" />
+        <img src="/comics/99/99-lost-in-translation-5.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -146,7 +153,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=96" rel="prev">
+        <a href="/?id=98" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -215,7 +222,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-07-31"></script>
+    <script src="/js/data.js?last-updated=2023-08-21"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
