New comic: Brains

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Jack and Rose</h1>
+      <h1>Brains</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=99" rel="prev">
+        <a href="/?id=100" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,9 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Comic with 2 panels parody of a scene of the movie Titanic. In the first panel, a man (Jack) and a woman (Rose) are at the front of a ship named Titanic, with their arms extended and smiling. Rose says: 'I have a secret Jack: I use divs as buttons'. In the second panel, Jack has pushed Rose over the rails and she falls into the ocean.">
-        <img src="/comics/100/100-jack-and-rose-0.webp" alt="" />
-        <img src="/comics/100/100-jack-and-rose-1.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon with an ashamed-looking brain (drawn in kawaii style) next to the text: Brains are amazing. they work nonstop 24/7 from the moment you are born until the moment you need to remember if it's align-text or text-align.">
+        <img src="/comics/101/101-brains-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -149,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=99" rel="prev">
+        <a href="/?id=100" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -178,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=100">https://comicss.art/?id=100</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/100/jack-and-rose.png">hhttps://comicss.art/comics/100/jack-and-rose.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/100/jack-and-rose.html" rel="alternate">https://comicss.art/comics/100/jack-and-rose.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=101">https://comicss.art/?id=101</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/101/brains.png">hhttps://comicss.art/comics/101/brains.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/101/brains.html" rel="alternate">https://comicss.art/comics/101/brains.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-08-28"></script>
+    <script src="/js/data.js?last-updated=2023-09-04"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
