--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Brains</h1>
+      <h1>Red Border</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=100" rel="prev">
+        <a href="/?id=101" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon with an ashamed-looking brain (drawn in kawaii style) next to the text: Brains are amazing. they work nonstop 24/7 from the moment you are born until the moment you need to remember if it's align-text or text-align.">
-        <img src="/comics/101/101-brains-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Comic strip with 4 panels. A figure walks into a CSS code that generates a red border and exclaims 'oh, wow! a CSS debugging red border!' Then adds 'This could be the same red border that helped debugging and learning to people like Rachel Andrew, or Eric Meyer, or Jen Simmons, or Harry Roberts, or Sara Soueidan, or...'. In the third panel, the character remains silent thinking. And finally pleads 'Please, red border, inspire me, and let me learn as much as them!'">
+        <img src="/comics/102/102-red-border-0.webp" alt="" />
+        <img src="/comics/102/102-red-border-1.webp" alt="" />
+        <img src="/comics/102/102-red-border-2.webp" alt="" />
+        <img src="/comics/102/102-red-border-3.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +151,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=100" rel="prev">
+        <a href="/?id=101" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +180,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=101">https://comicss.art/?id=101</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/101/brains.png">hhttps://comicss.art/comics/101/brains.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/101/brains.html" rel="alternate">https://comicss.art/comics/101/brains.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=102">https://comicss.art/?id=102</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/102/red-border.png">hhttps://comicss.art/comics/102/red-border.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/102/red-border.html" rel="alternate">https://comicss.art/comics/102/red-border.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +220,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-09-04"></script>
+    <script src="/js/data.js?last-updated=2023-09-11"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
