--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Red Border</h1>
+      <h1>News</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=101" rel="prev">
+        <a href="/?id=102" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,11 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Comic strip with 4 panels. A figure walks into a CSS code that generates a red border and exclaims 'oh, wow! a CSS debugging red border!' Then adds 'This could be the same red border that helped debugging and learning to people like Rachel Andrew, or Eric Meyer, or Jen Simmons, or Harry Roberts, or Sara Soueidan, or...'. In the third panel, the character remains silent thinking. And finally pleads 'Please, red border, inspire me, and let me learn as much as them!'">
-        <img src="/comics/102/102-red-border-0.webp" alt="" />
-        <img src="/comics/102/102-red-border-1.webp" alt="" />
-        <img src="/comics/102/102-red-border-2.webp" alt="" />
-        <img src="/comics/102/102-red-border-3.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon with two newscasters (a white man and a Black woman) reading the news from a paper. The mustached man says 'After a very long time, this week did not get a new CSS feature released by the CSS working group, or supported by any of the major browsers.' The woman adds, 'Police have already arrested the culprit, who, we hope, will spend a long time behind bars.'">
+        <img src="/comics/103/103-news-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -151,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=101" rel="prev">
+        <a href="/?id=102" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -220,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-09-11"></script>
+    <script src="/js/data.js?last-updated=2023-09-18"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
