--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>News</h1>
+      <h1>Then and Now</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=102" rel="prev">
+        <a href="/?id=103" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon with two newscasters (a white man and a Black woman) reading the news from a paper. The mustached man says 'After a very long time, this week did not get a new CSS feature released by the CSS working group, or supported by any of the major browsers.' The woman adds, 'Police have already arrested the culprit, who, we hope, will spend a long time behind bars.'">
-        <img src="/comics/103/103-news-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Comic with 2 rows. The first one is titled 'Web programming in 2003'. A person says 'I am off to develop a website', and comes back 5 hours later saying it completed the landing page, and found some cool effects. The row below is titled 'Web development in 2023'. The same person says 'I am off to develop a website', and comes back angry after 5 hours, no web development done, it has all been setting up the dev environment (and it's not done yet)">
+        <img src="/comics/104/104-evolution-0.webp" alt="" />
+        <img src="/comics/104/104-evolution-1.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +149,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=102" rel="prev">
+        <a href="/?id=103" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -217,7 +218,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-09-18"></script>
+    <script src="/js/data.js?last-updated=2023-09-25"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
