--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Then and Now</h1>
+      <h1>Divtober</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=103" rel="prev">
+        <a href="/?id=104" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,9 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Comic with 2 rows. The first one is titled 'Web programming in 2003'. A person says 'I am off to develop a website', and comes back 5 hours later saying it completed the landing page, and found some cool effects. The row below is titled 'Web development in 2023'. The same person says 'I am off to develop a website', and comes back angry after 5 hours, no web development done, it has all been setting up the dev environment (and it's not done yet)">
-        <img src="/comics/104/104-evolution-0.webp" alt="" />
-        <img src="/comics/104/104-evolution-1.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon with two characters talking. One happily says 'Now that divtober is over, our author can finally focus on comiCSS and forget about single-div drawings'. A loomy-looking character replies 'Yeah... about that...' -Author's note: the cartoon is a single-div drawing">
+        <img src="/comics/105/105-divtober-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -149,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=103" rel="prev">
+        <a href="/?id=104" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -178,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=102">https://comicss.art/?id=102</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/102/red-border.png">hhttps://comicss.art/comics/102/red-border.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/102/red-border.html" rel="alternate">https://comicss.art/comics/102/red-border.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=105">https://comicss.art/?id=105</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/105/divtober.png">hhttps://comicss.art/comics/105/divtober.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/105/divtober.html" rel="alternate">https://comicss.art/comics/105/divtober.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-09-25"></script>
+    <script src="/js/data.js?last-updated=2023-11-03"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
