--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Divtober</h1>
+      <h1>text-wrap</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=104" rel="prev">
+        <a href="/?id=105" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon with two characters talking. One happily says 'Now that divtober is over, our author can finally focus on comiCSS and forget about single-div drawings'. A loomy-looking character replies 'Yeah... about that...' -Author's note: the cartoon is a single-div drawing">
-        <img src="/comics/105/105-divtober-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="cartoon with three characters whose body is the text 'my body is a very long text that wraps along four or maybe five lines' squeezed together and have stick legs. The first character is on a skateboard, it has the body text well balanced, and is saying 'looking prety...' to the second character. The second character is wearing boots, its body text has two words in the last line, and replies 'looking balanced' to the first character. The last character looks sad/tired, its body text is grayer and the last line only contains an unbalanced one word. It says looking at the other characters 'I hate you two...'">
+        <img src="/comics/106/106-text-wrap-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=104" rel="prev">
+        <a href="/?id=105" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=105">https://comicss.art/?id=105</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/105/divtober.png">hhttps://comicss.art/comics/105/divtober.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/105/divtober.html" rel="alternate">https://comicss.art/comics/105/divtober.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=106">https://comicss.art/?id=106</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/106/text-wrap.png">hhttps://comicss.art/comics/106/text-wrap.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/106/text-wrap.html" rel="alternate">https://comicss.art/comics/106/text-wrap.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-11-03"></script>
+    <script src="/js/data.js?last-updated=2023-11-06"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
