--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Sharing Demos Online: Social Media Reaction</h1>
+      <h1>Coincidence?</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=107" rel="prev">
+        <a href="/?id=108" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon with a 3x3 grid titled 'sharing a demo online: social media reactions'. From Left to Right, Top to Bottom. Beginner Devs: a woman wearing a Mexico jerseys says 'Wow! This is so cool! Let me save it in a bookmark that I will never check again.' Snob Devs: a man wearing a turtle neck and glasses say 'That is great, but why not using something like [name of property supported by only 1 percent of the browsers]'. Designers: a person with yellow and pink hair says 'Wow! and THAT is why developers should NEVER design!' Recruiters: a robot says 'Hey! I saw your cool JavaScript demo. I have a Java opening that would be perfect for you! Javascript and Java are the same, right?' Your professors: a Black man with gray hair says 'Four years teaching them... for this? sigh... Retirement cannot arrive soon enough.' Grifters: a guy saying 'check this demo *I* totally coded myself.' Your partner: a Woman wearing a dress and pearls sobs: 'They say that sh*t took them 6 hours to code... I bet they are cheating!' Your manager: a big man wearing a suit and smoking a cigar complains: 'If they have time to build this sh*t off work, they have time to work... double their tasks!' Friends and family: a angry-looking person complains 'again with this sh*t? can they not post normal stuff like everyone else? Unfollow!'">
-        <img src="/comics/108/sharing-demo.png" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon with a table showing the different planets of the solar system in order closer to farther from the Sun. All of them show 0 deaths and no CSS, except for Earth that has CSS and 117,020,448,575 deaths. Below the table there's a question: coincidence?">
+        <img src="/comics/109/coincidence.png" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=107" rel="prev">
+        <a href="/?id=108" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=108">https://comicss.art/?id=108</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/108/sharing-demo.png">hhttps://comicss.art/comics/108/sharing-demo.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/108/sharing-demo.html" rel="alternate">https://comicss.art/comics/108/sharing-demo.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=9">https://comicss.art/?id=109</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/109/coincidence.png">hhttps://comicss.art/comics/109/coincidence.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/109/coincidence.html" rel="alternate">https://comicss.art/comics/109/coincidence.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-11-20"></script>
+    <script src="/js/data.js?last-updated=2023-11-27"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
