--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Coincidence?</h1>
+      <h1>Riddle</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=108" rel="prev">
+        <a href="/?id=109" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon with a table showing the different planets of the solar system in order closer to farther from the Sun. All of them show 0 deaths and no CSS, except for Earth that has CSS and 117,020,448,575 deaths. Below the table there's a question: coincidence?">
-        <img src="/comics/109/coincidence.png" alt="" />
+      <div id="comic-strip" role="img" aria-label="Card with a cartoon of Santa Claus and the question 'Who comes in Christmas and says Oh Oh Oh?' Clicking/tapping on the card will flip it 180 degrees revealing the answer: Santa Claus with a rotateY(180deg)">
+        <img src="/comics/110/110-riddle-0.webp" alt="" />
+        <img src="/comics/110/110-riddle-1.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +149,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=108" rel="prev">
+        <a href="/?id=109" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +178,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=9">https://comicss.art/?id=109</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/109/coincidence.png">hhttps://comicss.art/comics/109/coincidence.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/109/coincidence.html" rel="alternate">https://comicss.art/comics/109/coincidence.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=110">https://comicss.art/?id=110</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/110/riddle.png">hhttps://comicss.art/comics/110/riddle.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/110/riddle.html" rel="alternate">https://comicss.art/comics/110/riddle.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +218,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-11-27"></script>
+    <script src="/js/data.js?last-updated=2023-12-04"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
