--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Eleventy-One</h1>
+      <h1>Goldilocks</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=111" rel="prev">
+        <a href="/?id=112" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,11 +137,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon with four vertical panels parodying the farewell speech by Bilbo Baggins in The Lord of the Rings. A hobbit says farewell and disappears during his birthday speech, to the surprise of all the attendants. He then pops back next to his house saying 'Ha! You always work like a charm, my precious friend!' The last panel is a close-up of a ring with the CSS code: 'display: none; opacity: 0; visibility: hidden !important'">
-        <img src="/comics/112/112-eleventy-one-0.webp" alt="" />
-        <img src="/comics/112/112-eleventy-one-1.webp" alt="" />
-        <img src="/comics/112/112-eleventy-one-2.webp" alt="" />
-        <img src="/comics/112/112-eleventy-one-3.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="comic strip with 4 panels. The first one is a cover for Goldilocks and the Three Bears, with a girl and three bear heads, the names have been scratched and rewritten to GoldiloCSS and the Three Breaks. The following panels show some code and the result of it with a comment from GoldiloCSS. In the first one, she uses word-break: break-all, and all the words break at inconvenient places. She says 'too hard'. In the second one she uses word-break: keep-all. The words wrap to the next line unless they wouldn't fit, thent hey exceed the space allocated to them. GoldiloCSS comments 'Too soft'. In the last panel, she uses word-break:break-word and the words wrap to the next line unless they wouldn't fit, then they break. GoldiloCSS comments 'Just right... kind of...'">
+        <img src="/comics/113/113-goldilocks-0.webp" alt="" />
+        <img src="/comics/113/113-goldilocks-1.webp" alt="" />
+        <img src="/comics/113/113-goldilocks-2.webp" alt="" />
+        <img src="/comics/113/113-goldilocks-3.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -151,7 +151,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=111" rel="prev">
+        <a href="/?id=112" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -180,9 +180,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=112">https://comicss.art/?id=112</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/112/eleventy-one.png">hhttps://comicss.art/comics/112/eleventy-one.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/112/eleventy-one.html" rel="alternate">https://comicss.art/comics/112/eleventy-one.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=113">https://comicss.art/?id=113</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/113/goldilocks.png">hhttps://comicss.art/comics/113/goldilocks.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/113/goldilocks.html" rel="alternate">https://comicss.art/comics/113/goldilocks.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -220,7 +220,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-12-11"></script>
+    <script src="/js/data.js?last-updated=2023-12-25"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
