--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=114">https://comicss.art/?id=114</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/114/headaches.png">hhttps://comicss.art/comics/114/headaches.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/114/headaches.html" rel="alternate">https://comicss.art/comics/114/headaches.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=114">https://comicss.art/?id=114</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/114/headaches.png">hhttps://comicss.art/comics/114/headaches.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/114/headaches.html" rel="alternate">https://comicss.art/comics/114/headaches.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
