New cartoon: cloud developer

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Do Web Developers Dream of CSSheep?</h1>
+      <h1>Cloud Developer</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=114" rel="prev">
+        <a href="/?id=115" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,16 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="comic with 9 vertical panels, all of them showing a person in bed with a timer at the bottom right side of the panel. Panel 1: 22:30. The person smiles: 'as a web developer, I do not count sheep to go to sleep. I count front-end technologies that I would like to learn'. Panel 2: 22:31. The person starts falling asleep while dreaming/counting the CSS3 logo. Panel 3: 22:32. The person is sleeping merrilly while dreaming/counting the CSS3 and BEM logos. Panel 4: 22:33. The person opens an eye slightly while counting the CSS3, BEM, and Tailwind logos. Panel 5: 22:34. The person is startled while counting the CSS, BEM, Tailwind, and Bootstrap logos. Panel 6: 22:35. The person starts frawning while counting the CSS, BEM, Tailwind, Bootstrap, and Less logos. Panel 7: 22:36. The person looks worried while counting the CSS, BEM, Tailwind, Bootstrap, Less, and CSS-in-JS (JSS) logos. Panel 8: 22:45. The dream/counting bubble bursts with a worried looking person. Panel 9: 06:55. The person looks sad and sleepy, with bags under the eyes from not sleeping all night.">
-        <img src="/comics/115/115-counting-sheep-0.webp" alt="" />
-        <img src="/comics/115/115-counting-sheep-1.webp" alt="" />
-        <img src="/comics/115/115-counting-sheep-2.webp" alt="" />
-        <img src="/comics/115/115-counting-sheep-3.webp" alt="" />
-        <img src="/comics/115/115-counting-sheep-4.webp" alt="" />
-        <img src="/comics/115/115-counting-sheep-5.webp" alt="" />
-        <img src="/comics/115/115-counting-sheep-6.webp" alt="" />
-        <img src="/comics/115/115-counting-sheep-7.webp" alt="" />
-        <img src="/comics/115/115-counting-sheep-8.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon of a person using a computer with clouds in the background, next to a box with the following CSS code: .cloud-developer { background: azure; isolation: isolate; rest: none; stress: 100; content: none; }">
+        <img src="/comics/116/116-cloud-developer-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -156,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=114" rel="prev">
+        <a href="/?id=115" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -185,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=115">https://comicss.art/?id=115</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/115/counting-sheep.png">hhttps://comicss.art/comics/115/counting-sheep.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/115/counting-sheep.html" rel="alternate">https://comicss.art/comics/115/counting-sheep.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=116">https://comicss.art/?id=116</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/116/cloud-developer.png">hhttps://comicss.art/comics/116/cloud-developer.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/116/cloud-developer.html" rel="alternate">https://comicss.art/comics/116/cloud-developer.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -225,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-01-22"></script>
+    <script src="/js/data.js?last-updated=2024-02-02"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
