--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Astronaut</h1>
+      <h1>US Politics</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,13 +109,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=121" rel="prev">
+        <a href="/?id=122" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=83">
+        <a class="random-post" href="/?id=74">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -137,8 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="astronaut: a minimalistic cartoon of a person in an astronaut suit with many stars in the. background. Next to the following CSS code: .astronaut { elevation: above; isolation: isolate; flow-from: spaceship; flow-to: outerspace; transition: float; }">
-        <img src="/comics/122/122-astronaut-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Minimalistic cartoon of Abraham Lincoln next to three boxes of CSS code: on the top left .democrat{left:100%}; on the center top .undecided{align-self:center}; and on the top right .republican{right:100%}">
+        <img src="/comics/123/123-politics-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,13 +148,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=121" rel="prev">
+        <a href="/?id=122" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=62">
+        <a class="random-post" href="/?id=85">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -177,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=122">https://comicss.art/?id=122</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/122/astronaut.png">hhttps://comicss.art/comics/122/astronaut.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/122/astronaut.html" rel="alternate">https://comicss.art/comics/122/astronaut.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=123">https://comicss.art/?id=122</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/123/politics.png">hhttps://comicss.art/comics/123/politics.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/123/politics.html" rel="alternate">https://comicss.art/comics/123/politics.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-02-08"></script>
+    <script src="/js/data.js?last-updated=2024-02-17"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
