Fix in aria label

--- a/comics/123/politics.html
+++ b/comics/123/politics.html
@@ -450,7 +450,7 @@ article {
   </head>
   <body>
     <article role="img" aria-labelledby="alt-text">
-      <span id="alt-text">Dictator: a minimalistic cartoon of a man in military attire with medals and sun glasses, next to some CSS code.</span>
+      <span id="alt-text">Minimalistic cartoon of Abraham Lincoln next to three boxes of CSS code: on the top left .democrat{left:100%}; on the center top .undecided{align-self:center}; and on the top right .republican{right:100%}</span>
       <div class="codes">
       <code><span class="s">.democrat</span> {
   <span class="p">left</span>: <span class="n">100%</span>;
