New Cartoon: PR Reviews
[x] cartoons
[x] data
[x] source code
[x] feeds
[x] index
[x] archive
[ ] blog

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Transformer</h1>
+      <h1>PR Reviews</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=125" rel="prev">
+        <a href="/?id=126" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon of Optimus Prime (a robot character from the Transformers series) next to the following CSS code: .autobot, .decepticon { font-family: roboto; appearance: auto; will-change: appearance, transform; transform: scale(0.5); }">
-        <img src="/comics/126/126-transformer-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon with two panels title Web developers reviewing JS and 'CSS' (CSS is quoted). The first panel shows an angry-looking person saying 'Wow!! Four parameters in a function call??!! That's way too many!!! PR rejected!'. The second panel shows the same person reading a really long list of Tailwind class names and saying 'That CSS class looks stylish! Approved!'">
+        <img src="/comics/127/127-pr-reviews-0.webp" alt="" />
+        <img src="/comics/127/127-pr-reviews-1.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +149,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=125" rel="prev">
+        <a href="/?id=126" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +178,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=126">https://comicss.art/?id=126</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/126/transformer.png">hhttps://comicss.art/comics/126/transformer.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/126/transformer.html" rel="alternate">https://comicss.art/comics/126/transformer.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=127">https://comicss.art/?id=127</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/127/pr-reviews.png">hhttps://comicss.art/comics/127/pr-reviews.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/127/pr-reviews.html" rel="alternate">https://comicss.art/comics/127/pr-reviews.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +218,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-03-05"></script>
+    <script src="/js/data.js?last-updated=2024-03-11"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
