--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Appliance</h1>
+      <h1>Spring Break</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=128" rel="prev">
+        <a href="/?id=129" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Appliance: cartoon of a broken blender leaking its content. It is next to some CSS code: .appliance { color: lightsteelblue; counter-set: top; :has(.warranty) { break-before:avoid; break-after: always; }}">
-        <img src="/comics/129/129-appliance-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="a big cartoon with plenty of white space, an undefined character pops up moving around and asking several times 'comiCSS?'. Finally it stops in front of a beach chair where a person is drinking. The character asks 'comiCSS?!' and the person replies 'spring breaCSS'">
+        <img src="/comics/130/130-springbreak-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=128" rel="prev">
+        <a href="/?id=129" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=129">https://comicss.art/?id=129</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/129/appliance.png">hhttps://comicss.art/comics/129/appliance.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/129/appliance.html" rel="alternate">https://comicss.art/comics/129/appliance.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=130">https://comicss.art/?id=130</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/130/springbreak.png">hhttps://comicss.art/comics/130/springbreak.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/130/springbreak.html" rel="alternate">https://comicss.art/comics/130/springbreak.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-03-23"></script>
+    <script src="/js/data.js?last-updated=2024-03-29"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
